updating package.json for github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "macs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://chrisnorris070.github.io/macs",
+  "homepage": "https://github.com/chrisnorristech/reacttest",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
